fix page flicker when refreshing

--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,7 @@ p{
 [v-cloak] {
     display: none;
 }
+
+hr {
+    display:none;
+}
